unpackaged/main/default/objects/Business_Calendar_Setting__mdt/Business_Calendar_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Business Calendar Setting</label>
    <pluralLabel>Business Calendar Settings</pluralLabel>
</CustomObject>