unpackaged/main/default/objects/Business_Calendar_Setting__mdt/fields/Productivity_Retool_Holiday__c.field-meta.xml
<CustomField>
    <fullName>Productivity_Retool_Holiday__c</fullName>
    <label>Productivity: Retool Holiday</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>