unpackaged/main/default/objects/Business_Calendar_Setting__mdt/fields/Productivity_Sales_Event__c.field-meta.xml
<CustomField>
    <fullName>Productivity_Sales_Event__c</fullName>
    <label>Productivity: Sales Event</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>